# genetic

./: .gitignore  CMakeLists.txt  allotment.h  fitness.cpp  fitness.h  grade.cpp  grade.h  histogram.cpp  histogram.h  main.cpp
cmake/: FindCppUTest.cmake
scripts/: mkcsv  mkdata.py
test/: CMakeLists.txt  test-fitness.cpp  test-grade.cpp
